--- a/hybrideFrameworkProject/test-output/old/Default suite/classes.html
+++ b/hybrideFrameworkProject/test-output/old/Default suite/classes.html
@@ -11,15 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>searchpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -37,15 +33,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>helpPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -63,15 +55,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>initialize</td>
+<td>HomePage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -89,15 +77,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>loginpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -115,15 +99,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>aboutpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -141,15 +121,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>Cartpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -167,15 +143,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>Signuppage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -193,15 +165,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>orderpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -219,15 +187,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>indexpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -245,15 +209,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>basePageNavigation</td>
+<td>wishlistpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>startTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
