--- a/hybrideFrameworkProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/hybrideFrameworkProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,68 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:05:30</td>   <td>0</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:com.runner.HomePage@7096b474]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="b0c791">  <td>22/05/23 00:19:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.Cartpage()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">Cartpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="69e366">  <td>22/05/23 00:18:55</td>   <td>-48974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.HomePage()[pri:0, instance:com.runner.HomePage@7fc44dec]">HomePage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>22/05/23 00:19:20</td>   <td>-24565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.Signuppage()[pri:0, instance:com.runner.SignUpPageTest@42a9e5d1]">Signuppage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="c1b5b6">  <td>22/05/23 00:18:59</td>   <td>-45750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.aboutpage()[pri:0, instance:com.runner.AboutPageTest@878452d]">aboutpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>22/05/23 00:19:29</td>   <td>-15796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpPageTest.helpPage()[pri:0, instance:com.runner.HelpPageTest@5b080f3a]">helpPage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="fcf7ab">  <td>22/05/23 00:19:03</td>   <td>-41302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.indexpage()[pri:0, instance:com.runner.indexPageTest@426b6a74]">indexpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="66f1f5">  <td>22/05/23 00:19:34</td>   <td>-9913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpage()[pri:0, instance:com.runner.LoginPageTest@665e9289]">loginpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="90ad9c">  <td>22/05/23 00:19:49</td>   <td>4740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.orderpage()[pri:0, instance:com.runner.OrderPageTest@6f603e89]">orderpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="a7bace">  <td>22/05/23 00:19:12</td>   <td>-32026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.searchpage()[pri:0, instance:com.runner.SearchPageTest@83298d7]">searchpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="b0c791">  <td>22/05/23 00:18:55</td>   <td>-49008</td> <td title="&gt;&gt;CartcheckTest.setup()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="c1b5b6">  <td>22/05/23 00:18:55</td>   <td>-49170</td> <td title="&gt;&gt;AboutPageTest.setup()[pri:0, instance:com.runner.AboutPageTest@878452d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="b0c791">  <td>22/05/23 00:20:06</td>   <td>21148</td> <td title="&lt;&lt;CartcheckTest.tearDown()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="60f9cb">  <td>22/05/20 16:04:04</td>   <td>-85454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@43aaf813]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="69e366">  <td>22/05/20 16:04:18</td>   <td>-72096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.basePageNavigation()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>22/05/20 16:04:54</td>   <td>-35694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="ccb269">  <td>22/05/20 16:04:59</td>   <td>-30362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/20 16:04:41</td>   <td>-48304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="80d585">  <td>22/05/20 16:04:00</td>   <td>-89678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="62fc7d">  <td>22/05/20 16:04:10</td>   <td>-79421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="88d8b8">  <td>22/05/20 16:04:30</td>   <td>-60140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpPageTest.basePageNavigation()[pri:0, instance:com.runner.HelpPageTest@e98770d]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="ceb1df">  <td>22/05/20 16:03:56</td>   <td>-94094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">basePageNavigation</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:51</td>   <td>-98470</td> <td title="&gt;&gt;Base.beforsuite()[pri:0, instance:com.runner.HomePage@7096b474]">&gt;&gt;beforsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>22/05/20 16:03:51</td>   <td>-98199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@7096b474]">initialize</td> 
-  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:00</td>   <td>-89684</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:59</td>   <td>-30366</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:41</td>   <td>-48314</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:54</td>   <td>-35700</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:56</td>   <td>-94098</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:51</td>   <td>-98219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@7096b474]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:10</td>   <td>-79427</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:04</td>   <td>-85460</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@43aaf813]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:18</td>   <td>-72107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:30</td>   <td>-60154</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HelpPageTest@e98770d]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="ceb1df">  <td>22/05/20 16:05:29</td>   <td>-301</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>22/05/20 16:05:30</td>   <td>-109</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@7096b474]">&lt;&lt;teardown</td> 
+<tr bgcolor="c1b5b6">  <td>22/05/23 00:20:06</td>   <td>21147</td> <td title="&lt;&lt;AboutPageTest.tearDown()[pri:0, instance:com.runner.AboutPageTest@878452d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="69e366">  <td>22/05/23 00:20:05</td>   <td>21055</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@7fc44dec]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="62fc7d">  <td>22/05/20 16:05:30</td>   <td>-107</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">&lt;&lt;teardown</td> 
+<tr bgcolor="fcf7ab">  <td>22/05/23 00:20:05</td>   <td>21064</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@426b6a74]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="88d8b8">  <td>22/05/20 16:05:30</td>   <td>-114</td> <td>&nbsp;</td><td title="&lt;&lt;HelpPageTest.teardown()[pri:0, instance:com.runner.HelpPageTest@e98770d]">&lt;&lt;teardown</td> 
+<tr bgcolor="e29181">  <td>22/05/23 00:20:05</td>   <td>21063</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@4c51bb7]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>22/05/20 16:05:30</td>   <td>-118</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
-<tr bgcolor="60f9cb">  <td>22/05/20 16:05:30</td>   <td>-104</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@43aaf813]">&lt;&lt;teardown</td> 
+<tr bgcolor="9cd4d8">  <td>22/05/23 00:20:05</td>   <td>21062</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.teardown()[pri:0, instance:com.runner.SignUpPageTest@42a9e5d1]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ccb269">  <td>22/05/20 16:05:30</td>   <td>-108</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">&lt;&lt;teardown</td> 
+<tr bgcolor="d8a07f">  <td>22/05/23 00:20:05</td>   <td>21054</td> <td>&nbsp;</td><td title="&lt;&lt;HelpPageTest.teardown()[pri:0, instance:com.runner.HelpPageTest@5b080f3a]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="80d585">  <td>22/05/20 16:05:30</td>   <td>-102</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">&lt;&lt;teardown</td> 
+<tr bgcolor="b0c791">  <td>22/05/23 00:20:05</td>   <td>21032</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="90ad9c">  <td>22/05/23 00:20:05</td>   <td>21059</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@6f603e89]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="69e366">  <td>22/05/20 16:05:30</td>   <td>-106</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.teardown()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">&lt;&lt;teardown</td> 
+<tr bgcolor="a7bace">  <td>22/05/23 00:20:05</td>   <td>21060</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@83298d7]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/20 16:05:30</td>   <td>-108</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">&lt;&lt;teardown</td> 
+<tr bgcolor="66f1f5">  <td>22/05/23 00:20:05</td>   <td>21059</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@665e9289]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="c1b5b6">  <td>22/05/23 00:20:05</td>   <td>20605</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardowntest()[pri:0, instance:com.runner.AboutPageTest@878452d]">&lt;&lt;teardowntest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
+<tr bgcolor="e29181">  <td>22/05/23 00:19:06</td>   <td>-37960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.wishlistpage()[pri:0, instance:com.runner.WishlistTest@4c51bb7]">wishlistpage</td> 
+  <td>main@181078353</td>   <td></td> </tr>
 </table>
