--- a/hybrideFrameworkProject/test-output/old/Suite/methods.html
+++ b/hybrideFrameworkProject/test-output/old/Suite/methods.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3b89c">  <td>22/05/20 14:47:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@68044f4]">basePageNavigation</td> 
-  <td>TestNG-test=login test-1@72240090</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:47:46</td>   <td>-234</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@68044f4]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=login test-1@72240090</td>   <td></td> </tr>
-<tr bgcolor="f3b89c">  <td>22/05/20 14:48:03</td>   <td>15917</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@68044f4]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="817494">  <td>22/05/20 14:48:07</td>   <td>20602</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@4795ded0]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="817494">  <td>22/05/20 14:48:03</td>   <td>16271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@4795ded0]">basePageNavigation</td> 
-  <td>TestNG-test=cart test-1@706075658</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:03</td>   <td>16267</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@4795ded0]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=cart test-1@706075658</td>   <td></td> </tr>
-<tr bgcolor="f39bbd">  <td>22/05/20 14:48:07</td>   <td>20795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@5c8504fd]">basePageNavigation</td> 
-  <td>TestNG-test= search  pagetest-1@1616861614</td>   <td></td> </tr>
-<tr bgcolor="f39bbd">  <td>22/05/20 14:48:12</td>   <td>25650</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@5c8504fd]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:07</td>   <td>20780</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@5c8504fd]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test= search  pagetest-1@1616861614</td>   <td></td> </tr>
-<tr bgcolor="96b474">  <td>22/05/20 14:48:24</td>   <td>37282</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@3e14c16d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:13</td>   <td>25964</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@3e14c16d]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=order page test-1@1293807997</td>   <td></td> </tr>
-<tr bgcolor="96b474">  <td>22/05/20 14:48:13</td>   <td>25976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@3e14c16d]">basePageNavigation</td> 
-  <td>TestNG-test=order page test-1@1293807997</td>   <td></td> </tr>
-<tr bgcolor="76b9ea">  <td>22/05/20 14:48:26</td>   <td>39664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@1951b871]">initialize</td> 
-  <td>TestNG-test=home page test-1@62270255</td>   <td></td> </tr>
-<tr bgcolor="76b9ea">  <td>22/05/20 14:48:30</td>   <td>43493</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@1951b871]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:26</td>   <td>39636</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@1951b871]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=home page test-1@62270255</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:34</td>   <td>47718</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@e98770d]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=about page test-1@492357873</td>   <td></td> </tr>
-<tr bgcolor="a362e0">  <td>22/05/20 14:48:38</td>   <td>51859</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@e98770d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="a362e0">  <td>22/05/20 14:48:34</td>   <td>47727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@e98770d]">basePageNavigation</td> 
-  <td>TestNG-test=about page test-1@492357873</td>   <td></td> </tr>
-<tr bgcolor="cebaa5">  <td>22/05/20 14:48:42</td>   <td>55826</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@463b4ac8]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:39</td>   <td>52114</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@463b4ac8]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=wishlist page test-1@1810264152</td>   <td></td> </tr>
-<tr bgcolor="cebaa5">  <td>22/05/20 14:48:39</td>   <td>52126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@463b4ac8]">basePageNavigation</td> 
-  <td>TestNG-test=wishlist page test-1@1810264152</td>   <td></td> </tr>
-<tr bgcolor="6d6378">  <td>22/05/20 14:48:43</td>   <td>56022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@bff34c6]">basePageNavigation</td> 
-  <td>TestNG-test=intex page test-1@992184156</td>   <td></td> </tr>
-<tr bgcolor="6d6378">  <td>22/05/20 14:48:46</td>   <td>58994</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@bff34c6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:43</td>   <td>56017</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@bff34c6]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=intex page test-1@992184156</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/23 00:21:23</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@a8c1f44]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/23 00:21:15</td>   <td>-8013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpage()[pri:0, instance:com.runner.LoginPageTest@a8c1f44]">loginpage</td> 
+  <td>TestNG-test=login test-1@381999917</td>   <td></td> </tr>
+<tr bgcolor="827160">  <td>22/05/23 00:21:24</td>   <td>269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.Cartpage()[pri:0, instance:com.runner.CartcheckTest@5b64c4b7]">Cartpage</td> 
+  <td>TestNG-test=cart test-1@139322854</td>   <td></td> </tr>
+<tr bgcolor="827160">  <td>22/05/23 00:21:27</td>   <td>3788</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@5b64c4b7]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="83a2d3">  <td>22/05/23 00:21:32</td>   <td>8557</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@1252b961]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="83a2d3">  <td>22/05/23 00:21:27</td>   <td>3983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.searchpage()[pri:0, instance:com.runner.SearchPageTest@1252b961]">searchpage</td> 
+  <td>TestNG-test= search  pagetest-1@1050643847</td>   <td></td> </tr>
+<tr bgcolor="676c7a">  <td>22/05/23 00:21:36</td>   <td>12767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.orderpage()[pri:0, instance:com.runner.OrderPageTest@4d098f9b]">orderpage</td> 
+  <td>TestNG-test=order page test-1@207388418</td>   <td></td> </tr>
+<tr bgcolor="676c7a">  <td>22/05/23 00:21:49</td>   <td>25645</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@4d098f9b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="9d6167">  <td>22/05/23 00:21:49</td>   <td>25792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.HomePage()[pri:0, instance:com.runner.HomePage@7b64240d]">HomePage</td> 
+  <td>TestNG-test=home page test-1@225827463</td>   <td></td> </tr>
+<tr bgcolor="9d6167">  <td>22/05/23 00:21:52</td>   <td>28538</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@7b64240d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="e8ec8f">  <td>22/05/23 00:22:00</td>   <td>36786</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardowntest()[pri:0, instance:com.runner.AboutPageTest@65a4798f]">&lt;&lt;teardowntest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="e8ec8f">  <td>22/05/23 00:21:56</td>   <td>33083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.aboutpage()[pri:0, instance:com.runner.AboutPageTest@65a4798f]">aboutpage</td> 
+  <td>TestNG-test=about page test-1@705059958</td>   <td></td> </tr>
+<tr bgcolor="9298d7">  <td>22/05/23 00:22:05</td>   <td>41241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.wishlistpage()[pri:0, instance:com.runner.WishlistTest@5b080f3a]">wishlistpage</td> 
+  <td>TestNG-test=wishlist page test-1@1043763878</td>   <td></td> </tr>
+<tr bgcolor="9298d7">  <td>22/05/23 00:22:09</td>   <td>46134</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@5b080f3a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="609e89">  <td>22/05/23 00:22:14</td>   <td>50293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.indexpage()[pri:0, instance:com.runner.indexPageTest@6c8bca63]">indexpage</td> 
+  <td>TestNG-test=intex page test-1@1319271734</td>   <td></td> </tr>
+<tr bgcolor="609e89">  <td>22/05/23 00:22:17</td>   <td>53152</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@6c8bca63]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="a97fee">  <td>22/05/23 00:22:21</td>   <td>57446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.Signuppage()[pri:0, instance:com.runner.SignUpPageTest@1c55f277]">Signuppage</td> 
+  <td>TestNG-test=Signup page test-1@1658965157</td>   <td></td> </tr>
+<tr bgcolor="a97fee">  <td>22/05/23 00:22:28</td>   <td>64383</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.teardown()[pri:0, instance:com.runner.SignUpPageTest@1c55f277]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="827160">  <td>22/05/23 00:21:15</td>   <td>-8240</td> <td title="&gt;&gt;CartcheckTest.setup()[pri:0, instance:com.runner.CartcheckTest@5b64c4b7]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="e8ec8f">  <td>22/05/23 00:22:41</td>   <td>77700</td> <td title="&lt;&lt;AboutPageTest.tearDown()[pri:0, instance:com.runner.AboutPageTest@65a4798f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="e6d4b8">  <td>22/05/23 00:22:36</td>   <td>72986</td> <td>&nbsp;</td><td title="&lt;&lt;HelpPageTest.teardown()[pri:0, instance:com.runner.HelpPageTest@376a312c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="e8ec8f">  <td>22/05/23 00:21:15</td>   <td>-8049</td> <td title="&gt;&gt;AboutPageTest.setup()[pri:0, instance:com.runner.AboutPageTest@65a4798f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
+<tr bgcolor="e6d4b8">  <td>22/05/23 00:22:32</td>   <td>68673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpPageTest.helpPage()[pri:0, instance:com.runner.HelpPageTest@376a312c]">helpPage</td> 
+  <td>TestNG-test=help page test-1@51379075</td>   <td></td> </tr>
+<tr bgcolor="827160">  <td>22/05/23 00:22:41</td>   <td>77251</td> <td title="&lt;&lt;CartcheckTest.tearDown()[pri:0, instance:com.runner.CartcheckTest@5b64c4b7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@483525032</td>   <td></td> </tr>
 </table>
