--- a/hybrideFrameworkProject/test-output/old/Suite/toc.html
+++ b/hybrideFrameworkProject/test-output/old/Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>8 tests</td>
-<td><a target='mainFrame' href='classes.html'>8 classes</a></td>
-<td>8 methods:<br/>
+<td>10 tests</td>
+<td><a target='mainFrame' href='classes.html'>10 classes</a></td>
+<td>10 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,18 +20,18 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>login test (0/1/0)</td><td valign='top' align='right'>
-  <a href='login test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'> search  pagetest (1/0/0)</td><td valign='top' align='right'>
+  <a href=' search  pagetest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'> search  pagetest (1/0/0)</td><td valign='top' align='right'>
-  <a href=' search  pagetest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Signup page test (1/0/0)</td><td valign='top' align='right'>
+  <a href='Signup page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -54,6 +54,14 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
+<table style='width: 100%'><tr><td valign='top'>help page test (1/0/0)</td><td valign='top' align='right'>
+  <a href='help page test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
 <table style='width: 100%'><tr><td valign='top'>home page test (1/0/0)</td><td valign='top' align='right'>
   <a href='home page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
@@ -64,6 +72,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>intex page test (1/0/0)</td><td valign='top' align='right'>
   <a href='intex page test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>login test (1/0/0)</td><td valign='top' align='right'>
+  <a href='login test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
